compi/gramaticas/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> initGram
Rule 1     initGram -> RMAIN DOSPUNTOS instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> declaracion_registros PTCOMA
Rule 5     instruccion -> funcion_print PTCOMA
Rule 6     instruccion -> funcion_unset PTCOMA
Rule 7     instruccion -> salto_condicional PTCOMA
Rule 8     instruccion -> instruccion_control PTCOMA
Rule 9     instruccion -> REXIT PTCOMA
Rule 10    instruccion -> error PTCOMA
Rule 11    instruccion -> ETIQUETA DOSPUNTOS
Rule 12    salto_condicional -> RGOTO ETIQUETA
Rule 13    instruccion_control -> RIF PARIZQ expresion PARDER RGOTO ETIQUETA
Rule 14    funcion_unset -> RUNSET PARIZQ expresion PARDER
Rule 15    funcion_print -> RPRINT PARIZQ expresion PARDER
Rule 16    declaracion_registros -> ID ASIG expresion
Rule 17    declaracion_registros -> otra ASIG expresion
Rule 18    otra -> ID lista_accesos
Rule 19    expresion -> expresion MAS expresion
Rule 20    expresion -> expresion MENOS expresion
Rule 21    expresion -> expresion POR expresion
Rule 22    expresion -> expresion DIVIDIDO expresion
Rule 23    expresion -> expresion MODULO expresion
Rule 24    expresion -> expresion RAND expresion
Rule 25    expresion -> expresion ROR expresion
Rule 26    expresion -> expresion RXOR expresion
Rule 27    expresion -> expresion MAYOR expresion
Rule 28    expresion -> expresion MENOR expresion
Rule 29    expresion -> expresion MAYORIGUAL expresion
Rule 30    expresion -> expresion MENORIGUAL expresion
Rule 31    expresion -> expresion IGUAL expresion
Rule 32    expresion -> expresion DIFERENTE expresion
Rule 33    expresion -> expresion RANDBIT expresion
Rule 34    expresion -> expresion RORBIT expresion
Rule 35    expresion -> expresion RXORBIT expresion
Rule 36    expresion -> expresion SHIFTIZQ expresion
Rule 37    expresion -> expresion SHIFTDER expresion
Rule 38    casteos -> PARIZQ tipo_casteo PARDER expresion
Rule 39    tipo_casteo -> RINT
Rule 40    tipo_casteo -> RFLOAT
Rule 41    tipo_casteo -> RCHAR
Rule 42    absValue -> RABS PARIZQ expresion PARDER
Rule 43    lista_accesos -> lista_accesos CORIZQ expresion CORDER
Rule 44    lista_accesos -> CORIZQ expresion CORDER
Rule 45    expresion -> MENOS expresion
Rule 46    expresion -> RNOT expresion
Rule 47    expresion -> RNOTBIT expresion
Rule 48    expresion -> PARIZQ expresion PARDER
Rule 49    expresion -> ENTERO
Rule 50    expresion -> DECIMAL
Rule 51    expresion -> ID
Rule 52    expresion -> CADENA
Rule 53    expresion -> RABS PARIZQ expresion PARDER
Rule 54    expresion -> RARRAY PARIZQ PARDER
Rule 55    expresion -> RREAD PARIZQ PARDER
Rule 56    expresion -> casteos
Rule 57    expresion -> accesos_array
Rule 58    accesos_array -> ID lista_accesos

Terminals, with rules where they appear

ASIG                 : 16 17
CADENA               : 52
CORDER               : 43 44
CORIZQ               : 43 44
DECIMAL              : 50
DIFERENTE            : 32
DIVIDIDO             : 22
DOSPUNTOS            : 1 11
ENTERO               : 49
ETIQUETA             : 11 12 13
ID                   : 16 18 51 58
IGUAL                : 31
MAS                  : 19
MAYOR                : 27
MAYORIGUAL           : 29
MENOR                : 28
MENORIGUAL           : 30
MENOS                : 20 45
MODULO               : 23
PARDER               : 13 14 15 38 42 48 53 54 55
PARIZQ               : 13 14 15 38 42 48 53 54 55
POR                  : 21
PTCOMA               : 4 5 6 7 8 9 10
RABS                 : 42 53
RAND                 : 24
RANDBIT              : 33
RARRAY               : 54
RCHAR                : 41
REXIT                : 9
RFLOAT               : 40
RGOTO                : 12 13
RIF                  : 13
RINT                 : 39
RMAIN                : 1
RNOT                 : 46
RNOTBIT              : 47
ROR                  : 25
RORBIT               : 34
RPRINT               : 15
RREAD                : 55
RUNSET               : 14
RXOR                 : 26
RXORBIT              : 35
SHIFTDER             : 37
SHIFTIZQ             : 36
error                : 10

Nonterminals, with rules where they appear

absValue             : 
accesos_array        : 57
casteos              : 56
declaracion_registros : 4
expresion            : 13 14 15 16 17 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 42 43 44 45 46 47 48 53
funcion_print        : 5
funcion_unset        : 6
initGram             : 0
instruccion          : 2 3
instruccion_control  : 8
instrucciones        : 1 2
lista_accesos        : 18 43 58
otra                 : 17
salto_condicional    : 7
tipo_casteo          : 38

Parsing method: LALR

state 0

    (0) S' -> . initGram
    (1) initGram -> . RMAIN DOSPUNTOS instrucciones

    RMAIN           shift and go to state 2

    initGram                       shift and go to state 1

state 1

    (0) S' -> initGram .



state 2

    (1) initGram -> RMAIN . DOSPUNTOS instrucciones

    DOSPUNTOS       shift and go to state 3


state 3

    (1) initGram -> RMAIN DOSPUNTOS . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . declaracion_registros PTCOMA
    (5) instruccion -> . funcion_print PTCOMA
    (6) instruccion -> . funcion_unset PTCOMA
    (7) instruccion -> . salto_condicional PTCOMA
    (8) instruccion -> . instruccion_control PTCOMA
    (9) instruccion -> . REXIT PTCOMA
    (10) instruccion -> . error PTCOMA
    (11) instruccion -> . ETIQUETA DOSPUNTOS
    (16) declaracion_registros -> . ID ASIG expresion
    (17) declaracion_registros -> . otra ASIG expresion
    (15) funcion_print -> . RPRINT PARIZQ expresion PARDER
    (14) funcion_unset -> . RUNSET PARIZQ expresion PARDER
    (12) salto_condicional -> . RGOTO ETIQUETA
    (13) instruccion_control -> . RIF PARIZQ expresion PARDER RGOTO ETIQUETA
    (18) otra -> . ID lista_accesos

    REXIT           shift and go to state 11
    error           shift and go to state 12
    ETIQUETA        shift and go to state 13
    ID              shift and go to state 14
    RPRINT          shift and go to state 16
    RUNSET          shift and go to state 17
    RGOTO           shift and go to state 18
    RIF             shift and go to state 19

    instrucciones                  shift and go to state 4
    instruccion                    shift and go to state 5
    declaracion_registros          shift and go to state 6
    funcion_print                  shift and go to state 7
    funcion_unset                  shift and go to state 8
    salto_condicional              shift and go to state 9
    instruccion_control            shift and go to state 10
    otra                           shift and go to state 15

state 4

    (1) initGram -> RMAIN DOSPUNTOS instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . declaracion_registros PTCOMA
    (5) instruccion -> . funcion_print PTCOMA
    (6) instruccion -> . funcion_unset PTCOMA
    (7) instruccion -> . salto_condicional PTCOMA
    (8) instruccion -> . instruccion_control PTCOMA
    (9) instruccion -> . REXIT PTCOMA
    (10) instruccion -> . error PTCOMA
    (11) instruccion -> . ETIQUETA DOSPUNTOS
    (16) declaracion_registros -> . ID ASIG expresion
    (17) declaracion_registros -> . otra ASIG expresion
    (15) funcion_print -> . RPRINT PARIZQ expresion PARDER
    (14) funcion_unset -> . RUNSET PARIZQ expresion PARDER
    (12) salto_condicional -> . RGOTO ETIQUETA
    (13) instruccion_control -> . RIF PARIZQ expresion PARDER RGOTO ETIQUETA
    (18) otra -> . ID lista_accesos

    $end            reduce using rule 1 (initGram -> RMAIN DOSPUNTOS instrucciones .)
    REXIT           shift and go to state 11
    error           shift and go to state 12
    ETIQUETA        shift and go to state 13
    ID              shift and go to state 14
    RPRINT          shift and go to state 16
    RUNSET          shift and go to state 17
    RGOTO           shift and go to state 18
    RIF             shift and go to state 19

    instruccion                    shift and go to state 20
    declaracion_registros          shift and go to state 6
    funcion_print                  shift and go to state 7
    funcion_unset                  shift and go to state 8
    salto_condicional              shift and go to state 9
    instruccion_control            shift and go to state 10
    otra                           shift and go to state 15

state 5

    (3) instrucciones -> instruccion .

    REXIT           reduce using rule 3 (instrucciones -> instruccion .)
    error           reduce using rule 3 (instrucciones -> instruccion .)
    ETIQUETA        reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    RUNSET          reduce using rule 3 (instrucciones -> instruccion .)
    RGOTO           reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 6

    (4) instruccion -> declaracion_registros . PTCOMA

    PTCOMA          shift and go to state 21


state 7

    (5) instruccion -> funcion_print . PTCOMA

    PTCOMA          shift and go to state 22


state 8

    (6) instruccion -> funcion_unset . PTCOMA

    PTCOMA          shift and go to state 23


state 9

    (7) instruccion -> salto_condicional . PTCOMA

    PTCOMA          shift and go to state 24


state 10

    (8) instruccion -> instruccion_control . PTCOMA

    PTCOMA          shift and go to state 25


state 11

    (9) instruccion -> REXIT . PTCOMA

    PTCOMA          shift and go to state 26


state 12

    (10) instruccion -> error . PTCOMA

    PTCOMA          shift and go to state 27


state 13

    (11) instruccion -> ETIQUETA . DOSPUNTOS

    DOSPUNTOS       shift and go to state 28


state 14

    (16) declaracion_registros -> ID . ASIG expresion
    (18) otra -> ID . lista_accesos
    (43) lista_accesos -> . lista_accesos CORIZQ expresion CORDER
    (44) lista_accesos -> . CORIZQ expresion CORDER

    ASIG            shift and go to state 29
    CORIZQ          shift and go to state 31

    lista_accesos                  shift and go to state 30

state 15

    (17) declaracion_registros -> otra . ASIG expresion

    ASIG            shift and go to state 32


state 16

    (15) funcion_print -> RPRINT . PARIZQ expresion PARDER

    PARIZQ          shift and go to state 33


state 17

    (14) funcion_unset -> RUNSET . PARIZQ expresion PARDER

    PARIZQ          shift and go to state 34


state 18

    (12) salto_condicional -> RGOTO . ETIQUETA

    ETIQUETA        shift and go to state 35


state 19

    (13) instruccion_control -> RIF . PARIZQ expresion PARDER RGOTO ETIQUETA

    PARIZQ          shift and go to state 36


state 20

    (2) instrucciones -> instrucciones instruccion .

    REXIT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ETIQUETA        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RUNSET          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RGOTO           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 21

    (4) instruccion -> declaracion_registros PTCOMA .

    REXIT           reduce using rule 4 (instruccion -> declaracion_registros PTCOMA .)
    error           reduce using rule 4 (instruccion -> declaracion_registros PTCOMA .)
    ETIQUETA        reduce using rule 4 (instruccion -> declaracion_registros PTCOMA .)
    ID              reduce using rule 4 (instruccion -> declaracion_registros PTCOMA .)
    RPRINT          reduce using rule 4 (instruccion -> declaracion_registros PTCOMA .)
    RUNSET          reduce using rule 4 (instruccion -> declaracion_registros PTCOMA .)
    RGOTO           reduce using rule 4 (instruccion -> declaracion_registros PTCOMA .)
    RIF             reduce using rule 4 (instruccion -> declaracion_registros PTCOMA .)
    $end            reduce using rule 4 (instruccion -> declaracion_registros PTCOMA .)


state 22

    (5) instruccion -> funcion_print PTCOMA .

    REXIT           reduce using rule 5 (instruccion -> funcion_print PTCOMA .)
    error           reduce using rule 5 (instruccion -> funcion_print PTCOMA .)
    ETIQUETA        reduce using rule 5 (instruccion -> funcion_print PTCOMA .)
    ID              reduce using rule 5 (instruccion -> funcion_print PTCOMA .)
    RPRINT          reduce using rule 5 (instruccion -> funcion_print PTCOMA .)
    RUNSET          reduce using rule 5 (instruccion -> funcion_print PTCOMA .)
    RGOTO           reduce using rule 5 (instruccion -> funcion_print PTCOMA .)
    RIF             reduce using rule 5 (instruccion -> funcion_print PTCOMA .)
    $end            reduce using rule 5 (instruccion -> funcion_print PTCOMA .)


state 23

    (6) instruccion -> funcion_unset PTCOMA .

    REXIT           reduce using rule 6 (instruccion -> funcion_unset PTCOMA .)
    error           reduce using rule 6 (instruccion -> funcion_unset PTCOMA .)
    ETIQUETA        reduce using rule 6 (instruccion -> funcion_unset PTCOMA .)
    ID              reduce using rule 6 (instruccion -> funcion_unset PTCOMA .)
    RPRINT          reduce using rule 6 (instruccion -> funcion_unset PTCOMA .)
    RUNSET          reduce using rule 6 (instruccion -> funcion_unset PTCOMA .)
    RGOTO           reduce using rule 6 (instruccion -> funcion_unset PTCOMA .)
    RIF             reduce using rule 6 (instruccion -> funcion_unset PTCOMA .)
    $end            reduce using rule 6 (instruccion -> funcion_unset PTCOMA .)


state 24

    (7) instruccion -> salto_condicional PTCOMA .

    REXIT           reduce using rule 7 (instruccion -> salto_condicional PTCOMA .)
    error           reduce using rule 7 (instruccion -> salto_condicional PTCOMA .)
    ETIQUETA        reduce using rule 7 (instruccion -> salto_condicional PTCOMA .)
    ID              reduce using rule 7 (instruccion -> salto_condicional PTCOMA .)
    RPRINT          reduce using rule 7 (instruccion -> salto_condicional PTCOMA .)
    RUNSET          reduce using rule 7 (instruccion -> salto_condicional PTCOMA .)
    RGOTO           reduce using rule 7 (instruccion -> salto_condicional PTCOMA .)
    RIF             reduce using rule 7 (instruccion -> salto_condicional PTCOMA .)
    $end            reduce using rule 7 (instruccion -> salto_condicional PTCOMA .)


state 25

    (8) instruccion -> instruccion_control PTCOMA .

    REXIT           reduce using rule 8 (instruccion -> instruccion_control PTCOMA .)
    error           reduce using rule 8 (instruccion -> instruccion_control PTCOMA .)
    ETIQUETA        reduce using rule 8 (instruccion -> instruccion_control PTCOMA .)
    ID              reduce using rule 8 (instruccion -> instruccion_control PTCOMA .)
    RPRINT          reduce using rule 8 (instruccion -> instruccion_control PTCOMA .)
    RUNSET          reduce using rule 8 (instruccion -> instruccion_control PTCOMA .)
    RGOTO           reduce using rule 8 (instruccion -> instruccion_control PTCOMA .)
    RIF             reduce using rule 8 (instruccion -> instruccion_control PTCOMA .)
    $end            reduce using rule 8 (instruccion -> instruccion_control PTCOMA .)


state 26

    (9) instruccion -> REXIT PTCOMA .

    REXIT           reduce using rule 9 (instruccion -> REXIT PTCOMA .)
    error           reduce using rule 9 (instruccion -> REXIT PTCOMA .)
    ETIQUETA        reduce using rule 9 (instruccion -> REXIT PTCOMA .)
    ID              reduce using rule 9 (instruccion -> REXIT PTCOMA .)
    RPRINT          reduce using rule 9 (instruccion -> REXIT PTCOMA .)
    RUNSET          reduce using rule 9 (instruccion -> REXIT PTCOMA .)
    RGOTO           reduce using rule 9 (instruccion -> REXIT PTCOMA .)
    RIF             reduce using rule 9 (instruccion -> REXIT PTCOMA .)
    $end            reduce using rule 9 (instruccion -> REXIT PTCOMA .)


state 27

    (10) instruccion -> error PTCOMA .

    REXIT           reduce using rule 10 (instruccion -> error PTCOMA .)
    error           reduce using rule 10 (instruccion -> error PTCOMA .)
    ETIQUETA        reduce using rule 10 (instruccion -> error PTCOMA .)
    ID              reduce using rule 10 (instruccion -> error PTCOMA .)
    RPRINT          reduce using rule 10 (instruccion -> error PTCOMA .)
    RUNSET          reduce using rule 10 (instruccion -> error PTCOMA .)
    RGOTO           reduce using rule 10 (instruccion -> error PTCOMA .)
    RIF             reduce using rule 10 (instruccion -> error PTCOMA .)
    $end            reduce using rule 10 (instruccion -> error PTCOMA .)


state 28

    (11) instruccion -> ETIQUETA DOSPUNTOS .

    REXIT           reduce using rule 11 (instruccion -> ETIQUETA DOSPUNTOS .)
    error           reduce using rule 11 (instruccion -> ETIQUETA DOSPUNTOS .)
    ETIQUETA        reduce using rule 11 (instruccion -> ETIQUETA DOSPUNTOS .)
    ID              reduce using rule 11 (instruccion -> ETIQUETA DOSPUNTOS .)
    RPRINT          reduce using rule 11 (instruccion -> ETIQUETA DOSPUNTOS .)
    RUNSET          reduce using rule 11 (instruccion -> ETIQUETA DOSPUNTOS .)
    RGOTO           reduce using rule 11 (instruccion -> ETIQUETA DOSPUNTOS .)
    RIF             reduce using rule 11 (instruccion -> ETIQUETA DOSPUNTOS .)
    $end            reduce using rule 11 (instruccion -> ETIQUETA DOSPUNTOS .)


state 29

    (16) declaracion_registros -> ID ASIG . expresion
    (19) expresion -> . expresion MAS expresion
    (20) expresion -> . expresion MENOS expresion
    (21) expresion -> . expresion POR expresion
    (22) expresion -> . expresion DIVIDIDO expresion
    (23) expresion -> . expresion MODULO expresion
    (24) expresion -> . expresion RAND expresion
    (25) expresion -> . expresion ROR expresion
    (26) expresion -> . expresion RXOR expresion
    (27) expresion -> . expresion MAYOR expresion
    (28) expresion -> . expresion MENOR expresion
    (29) expresion -> . expresion MAYORIGUAL expresion
    (30) expresion -> . expresion MENORIGUAL expresion
    (31) expresion -> . expresion IGUAL expresion
    (32) expresion -> . expresion DIFERENTE expresion
    (33) expresion -> . expresion RANDBIT expresion
    (34) expresion -> . expresion RORBIT expresion
    (35) expresion -> . expresion RXORBIT expresion
    (36) expresion -> . expresion SHIFTIZQ expresion
    (37) expresion -> . expresion SHIFTDER expresion
    (45) expresion -> . MENOS expresion
    (46) expresion -> . RNOT expresion
    (47) expresion -> . RNOTBIT expresion
    (48) expresion -> . PARIZQ expresion PARDER
    (49) expresion -> . ENTERO
    (50) expresion -> . DECIMAL
    (51) expresion -> . ID
    (52) expresion -> . CADENA
    (53) expresion -> . RABS PARIZQ expresion PARDER
    (54) expresion -> . RARRAY PARIZQ PARDER
    (55) expresion -> . RREAD PARIZQ PARDER
    (56) expresion -> . casteos
    (57) expresion -> . accesos_array
    (38) casteos -> . PARIZQ tipo_casteo PARDER expresion
    (58) accesos_array -> . ID lista_accesos

    MENOS           shift and go to state 39
    RNOT            shift and go to state 40
    RNOTBIT         shift and go to state 41
    PARIZQ          shift and go to state 42
    ENTERO          shift and go to state 43
    DECIMAL         shift and go to state 44
    ID              shift and go to state 37
    CADENA          shift and go to state 45
    RABS            shift and go to state 46
    RARRAY          shift and go to state 47
    RREAD           shift and go to state 48

    expresion                      shift and go to state 38
    casteos                        shift and go to state 49
    accesos_array                  shift and go to state 50

state 30

    (18) otra -> ID lista_accesos .
    (43) lista_accesos -> lista_accesos . CORIZQ expresion CORDER

    ASIG            reduce using rule 18 (otra -> ID lista_accesos .)
    CORIZQ          shift and go to state 51


state 31

    (44) lista_accesos -> CORIZQ . expresion CORDER
    (19) expresion -> . expresion MAS expresion
    (20) expresion -> . expresion MENOS expresion
    (21) expresion -> . expresion POR expresion
    (22) expresion -> . expresion DIVIDIDO expresion
    (23) expresion -> . expresion MODULO expresion
    (24) expresion -> . expresion RAND expresion
    (25) expresion -> . expresion ROR expresion
    (26) expresion -> . expresion RXOR expresion
    (27) expresion -> . expresion MAYOR expresion
    (28) expresion -> . expresion MENOR expresion
    (29) expresion -> . expresion MAYORIGUAL expresion
    (30) expresion -> . expresion MENORIGUAL expresion
    (31) expresion -> . expresion IGUAL expresion
    (32) expresion -> . expresion DIFERENTE expresion
    (33) expresion -> . expresion RANDBIT expresion
    (34) expresion -> . expresion RORBIT expresion
    (35) expresion -> . expresion RXORBIT expresion
    (36) expresion -> . expresion SHIFTIZQ expresion
    (37) expresion -> . expresion SHIFTDER expresion
    (45) expresion -> . MENOS expresion
    (46) expresion -> . RNOT expresion
    (47) expresion -> . RNOTBIT expresion
    (48) expresion -> . PARIZQ expresion PARDER
    (49) expresion -> . ENTERO
    (50) expresion -> . DECIMAL
    (51) expresion -> . ID
    (52) expresion -> . CADENA
    (53) expresion -> . RABS PARIZQ expresion PARDER
    (54) expresion -> . RARRAY PARIZQ PARDER
    (55) expresion -> . RREAD PARIZQ PARDER
    (56) expresion -> . casteos
    (57) expresion -> . accesos_array
    (38) casteos -> . PARIZQ tipo_casteo PARDER expresion
    (58) accesos_array -> . ID lista_accesos

    MENOS           shift and go to state 39
    RNOT            shift and go to state 40
    RNOTBIT         shift and go to state 41
    PARIZQ          shift and go to state 42
    ENTERO          shift and go to state 43
    DECIMAL         shift and go to state 44
    ID              shift and go to state 37
    CADENA          shift and go to state 45
    RABS            shift and go to state 46
    RARRAY          shift and go to state 47
    RREAD           shift and go to state 48

    expresion                      shift and go to state 52
    casteos                        shift and go to state 49
    accesos_array                  shift and go to state 50

state 32

    (17) declaracion_registros -> otra ASIG . expresion
    (19) expresion -> . expresion MAS expresion
    (20) expresion -> . expresion MENOS expresion
    (21) expresion -> . expresion POR expresion
    (22) expresion -> . expresion DIVIDIDO expresion
    (23) expresion -> . expresion MODULO expresion
    (24) expresion -> . expresion RAND expresion
    (25) expresion -> . expresion ROR expresion
    (26) expresion -> . expresion RXOR expresion
    (27) expresion -> . expresion MAYOR expresion
    (28) expresion -> . expresion MENOR expresion
    (29) expresion -> . expresion MAYORIGUAL expresion
    (30) expresion -> . expresion MENORIGUAL expresion
    (31) expresion -> . expresion IGUAL expresion
    (32) expresion -> . expresion DIFERENTE expresion
    (33) expresion -> . expresion RANDBIT expresion
    (34) expresion -> . expresion RORBIT expresion
    (35) expresion -> . expresion RXORBIT expresion
    (36) expresion -> . expresion SHIFTIZQ expresion
    (37) expresion -> . expresion SHIFTDER expresion
    (45) expresion -> . MENOS expresion
    (46) expresion -> . RNOT expresion
    (47) expresion -> . RNOTBIT expresion
    (48) expresion -> . PARIZQ expresion PARDER
    (49) expresion -> . ENTERO
    (50) expresion -> . DECIMAL
    (51) expresion -> . ID
    (52) expresion -> . CADENA
    (53) expresion -> . RABS PARIZQ expresion PARDER
    (54) expresion -> . RARRAY PARIZQ PARDER
    (55) expresion -> . RREAD PARIZQ PARDER
    (56) expresion -> . casteos
    (57) expresion -> . accesos_array
    (38) casteos -> . PARIZQ tipo_casteo PARDER expresion
    (58) accesos_array -> . ID lista_accesos
